[project]
name = "doubao-image-mcp"
version = "0.1.0"
description = "豆包图像生成 MCP 服务器 - 允许其他 AI 模型调用豆包图像生成 API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
doubao-image-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
